tests/purs/failing/PASTrumpsKDNU1.out
Error found:
in module [33mMain[0m
at tests/purs/failing/PASTrumpsKDNU1.purs:14:33 - 14:43 (line 14, column 33 - line 14, column 43)

  Type synonym [33mData.NaturalTransformation.NaturalTransformation[0m is partially applied.
  Type synonyms must be applied to all of their type arguments.

while checking that type [33mNaturalTransformation Array[0m
  has kind [33mType[0m
while inferring the kind of [33mShow a => NaturalTransformation Array[0m
while inferring the kind of [33mProxy (Show a => NaturalTransformation Array)[0m
while inferring the kind of [33mforall a. Proxy (Show a => NaturalTransformation Array)[0m
in value declaration [33mf[0m

See https://github.com/purescript/documentation/blob/master/errors/PartiallyAppliedSynonym.md for more information,
or to contribute content related to this error.

